--- a/InstagrammDemoApp/Info.plist
+++ b/InstagrammDemoApp/Info.plist
@@ -2,8 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>Camera</key>
-	<string></string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>micro</string>
 	<key>NSCameraUsageDescription</key>
 	<string>use camera</string>
 	<key>NSPhotoLibraryUsageDescription</key>
